# pyvcroid2

./: LICENSE  README.md  sample.py  setup.cfg
pyvcroid2/: __init__.py  aitalk.py  pyvcroid2.py
