[metadata]
name = pyvcroid2
version = attr: pyvcroid2.__version__
url = https://github.com/Nkyoku/pyvcroid2
author = Nkyoku
license_file = LICENSE
description = Python Library to Access to Core DLL of VOICEROID2
long_description = file: README.md
platforms = Windows

[options]
packages = pyvcroid2
python_requires = >= 3.4
